--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "~6.3.0",
     "@fortawesome/free-brands-svg-icons": "~6.3.0",
     "@fortawesome/free-solid-svg-icons": "~6.3.0",
+    "g": "^2.0.1",
     "rxjs": "~7.5.0",
     "tslib": "~2.3.0",
     "zone.js": "~0.11.4"
@@ -35,7 +36,7 @@
     "@angular-eslint/eslint-plugin-template": "15.2.1",
     "@angular-eslint/schematics": "15.2.1",
     "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~15.2.0",
+    "@angular/cli": "^15.2.1",
     "@angular/compiler-cli": "~15.2.0",
     "@tailwindcss/forms": "~0.5.2",
     "@types/jasmine": "~4.0.0",
