--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "g": "^2.0.1",
     "rxjs": "~7.5.0",
     "tslib": "~2.3.0",
+    "typescript-cookie": "^1.0.6",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
