--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "~6.3.0",
     "@fortawesome/free-solid-svg-icons": "~6.3.0",
     "g": "^2.0.1",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "~2.3.0",
     "typescript-cookie": "^1.0.6",
